# shapeshift-engine

./: .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
backend/: .clang-format  CMakeLists.txt  main.cpp  vcpkg.json
frontend/: package-lock.json
frontend/src/: polygon.js  polygon_graphics.js
public/: site.webmanifest
src/: diff_func.js  i18n.js  main.js  polygon.js  polygon2svg.js  polygon_graphics.js  polygon_manager.js  relation_editor.js  style.css  utilities.js
src/lang/: en.json  zh.json
